--- a/build.gradle
+++ b/build.gradle
@@ -12,5 +12,5 @@ javafx {
 }
 
 application {
-    mainClass = 'sillypackagenamepleasechange.SillyClassNamePleaseChange'
+    mainClass = 'filecompare.FileCompareApp'
 }
